--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Elvis Guerra/Music</a>
+        <a class="navbar-brand" href="index.html">Elvis Guerra/Music</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Historias</a>
+              <a class="nav-link" href="historia.html">Historias</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Músicos</a>
@@ -58,14 +58,19 @@
           left: 50%;
           transform: translate(-50%, -50%);
         }
+        img {
+              width: 98%; 
+             height: 600px; 
+             background-size: cover;
+            }
         </style>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagenes/Elvis1.jpg" alt="Foto 1">
-          <div class="image-description">Este artista es un músico increíblemente talentoso, especialmente en el piano y la percusión. Además de tener una sólida formación en contabilidad y gerencia pública, este artista tiene una pasión y dedicación por la música que se refleja en su increíble habilidad y maestría en los instrumentos. Cada vez que escuchamos a este artista tocar, quedamos impresionados por su habilidad y su capacidad para transmitir emoción y pasión a través de su música.</div>
+          <img src="imagenes/Elvis2.jpg" alt="Foto 1">
+          <div class="image-description">Arte musical.</div>
         </div>
         <div class="carousel-item">
-          <img src="imagenes/Elvis2.jpg" alt="Foto 2">
+          <img src="imagenes/elvis8.jpeg" alt="Foto 2">
           <div class="image-description fade-in" onmouseover="this.style.opacity=1">Este artista es un músico excepcionalmente talentoso que combina su experiencia y conocimientos en contabilidad y gerencia pública con su pasión y dedicación a la música. Su habilidad en el piano y la percusión es sorprendente y siempre deja a su audiencia impresionada con su maestría y capacidad para transmitir emoción y pasión a través de su música. Si quieres disfrutar de una verdadera experiencia musical, no puedes perderte la oportunidad de escuchar a este artista tocar en vivo.</div>
           </div>
       </div>
