--- a/galeria.html
+++ b/galeria.html
@@ -35,11 +35,19 @@
               <a class="nav-link" href="galeria.html">Galería</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link whatsapp" href="#">WhatsApp</a>
+
             </li>
           </ul>
         </div>
       </nav>
+      <!--script para en lase de WhatsApp-->
+      <script>
+        document.querySelector('.whatsapp').addEventListener('click', function() {
+    window.location.href = 'https://wa.me/3008024298';
+  });
+  
+      </script>
     </header>
     
 <!-- Galería de imágenes -->
