--- a/index.html
+++ b/index.html
@@ -32,12 +32,19 @@
               <a class="nav-link" href="galeria.html">Galería</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link whatsapp" href="#">WhatsApp</a>
+
             </li>
           </ul>
         </div>
       </nav>
-      
+          <!--script para en lase de WhatsApp-->
+      <script>
+        document.querySelector('.whatsapp').addEventListener('click', function() {
+    window.location.href = 'https://wa.me/3008024298';
+  });
+  
+      </script>
     </header>
  
     <div id="slideshow" class="carousel slide" data-ride="carousel">
