--- a/galeria.html
+++ b/galeria.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="historia.html">Historias</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Músicos</a>
+              <a class="nav-link" href="columnas.htm">Columnas Elvis</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="galeria.html">Galería</a>
