--- a/historia.html
+++ b/historia.html
@@ -27,7 +27,7 @@
                   <a class="nav-link" href="historia.html">Historias</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Músicos</a>
+                  <a class="nav-link" href="columnas.htm">Columnas Elvis</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="galeria.html">Galería</a>
