--- a/galeria.html
+++ b/galeria.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="ruta/swipebox.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
     <title>Elvis Guerra</title>
@@ -18,7 +19,7 @@
     <body>
        
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="index.html">Elvis Guerra/Music</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -51,6 +52,7 @@
     </header>
     
 <!-- Galería de imágenes -->
+<div id=" galeria-container">
 <div id="galeria">
     <a href="imagenes/Elvis3.jpg" class="swipebox">
       <img src="imagenes/Elvis3.jpg" alt="Imagen 1">        
@@ -102,19 +104,35 @@
     </a>
 
   </div>
+</div>
   
-<!--pie de pagina -->
-<div class="container">
-  <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-    </ul>
-    <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
-  </footer>
+<!--Pie de pagina-->
+<footer class="py-3 my-4">
+  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <li class="nav-item">
+      <a href="https://www.instagram.com/elvisguerra_/" class="nav-link px-2">
+        <i class="fab fa-instagram fa-lg"></i>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a href="https://www.facebook.com/elvispercusion" class="nav-link px-2">
+        <i class="fab fa-facebook-f fa-lg"></i>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a href="https://twitter.com/elvispercusion" class="nav-link px-2">
+        <i class="fab fa-twitter fa-lg"></i>
+      </a>
+    </li>
+  </ul>
+  <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
+</footer>
+<style>
+  footer{
+
+    background-color: black;
+  }
+</style>
 </div>
   </body>
 </html>
