--- a/galeria.html
+++ b/galeria.html
@@ -19,6 +19,9 @@
     <body>
        
     <header>
+         <!--marca de agua de las secciones-->
+         <img src="imagenes/pianofondo.jpg" id="marca-de-agua">
+           <!--Navbar -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="index.html">Elvis Guerra/Music</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="historia.html">Historias</a>
+              <a class="nav-link" href="historia.html">Historia</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="columnas.htm">Columnas Elvis</a>
@@ -127,11 +130,21 @@
   </ul>
   <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
 </footer>
+<!--Style-->
 <style>
   footer{
 
     background-color: black;
   }
+  #marca-de-agua {
+  position: absolute; /* para que la imagen no ocupe espacio en la página */
+  top: 0; /* para que la imagen esté alineada con el borde superior de la página */
+  left: 0; /* para que la imagen esté alineada con el borde izquierdo de la página */
+  width: 100%; /* para que la imagen ocupe todo el ancho disponible */
+  height: auto; /* para que la altura se ajuste automáticamente al ancho */
+  z-index: -1; /* para que la imagen quede detrás de los demás elementos de la página */
+  opacity: 0.9; /* para darle transparencia a la imagen */
+}
 </style>
 </div>
   </body>
