--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="historia.html">Historias</a>
+              <a class="nav-link" href="historia.html">Historia</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="columnas.htm">Columnas Elvis</a>
