--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     
     </header>
  
-    <div id="slideshow" class="carousel slide" data-ride="carousel">
+    <div id="slideshow" class="carousel slide" data-ride"carousel">
       <!-- Indicadores -->
       <ol class="carousel-indicators">
         <li data-target="#slideshow" data-slide-to="0" class="active"></li>
