--- a/WebSiteTrombonesDelCaribe/Index.html
+++ b/WebSiteTrombonesDelCaribe/Index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Orquesta de mi Tío</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="Style.css">
   <style>
     /* Estilos personalizados */
     /* Agrega tus estilos CSS adicionales aquí */
