--- a/WebSiteTrombonesDelCaribe/Index.html
+++ b/WebSiteTrombonesDelCaribe/Index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Orquesta de mi Tío</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="Style.css">
+ 
   <style>
     /* Estilos personalizados */
     /* Agrega tus estilos CSS adicionales aquí */
@@ -47,22 +47,23 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="imagen1.jpg" alt="Imagen 1">
+          <img class="d-block w-50 mx-auto" src="Imagenes/TRb1.jpg" alt="Imagen 1">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen2.jpg" alt="Imagen 2">
+          <img class="d-block w-50 mx-auto" src="Imagenes/TRB2.jpg" alt="Imagen 2">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen3.jpg" alt="Imagen 3">
+          <img class="d-block w-50 mx-auto" src="Imagenes/TRB3.jpg" alt="Imagen 3">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen4.jpg" alt="Imagen 4">
+          <img class="d-block w-50 mx-auto" src="Imagenes/TRB4.jpg" alt="Imagen 4">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Anterior</span>
-    </a>
+     
+  </a>
 </div>
 </main>
 <footer class="bg-light">
