--- a/WebSiteTrombonesDelCaribe/Index.html
+++ b/WebSiteTrombonesDelCaribe/Index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="#">Orquesta de mi Tío</a>
+      <a class="navbar-brand" href="#">Trombones Del Caribe</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
