Creacion de paginas
Se agregan vinculos de paginas de los botones del Nav

--- a/WebSiteTrombonesDelCaribe/Index.html
+++ b/WebSiteTrombonesDelCaribe/Index.html
@@ -14,23 +14,23 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="#">Trombones Del Caribe</a>
+      <a class="navbar-brand" href="Index.html">Trombones Del Caribe</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#quienes-somos">Quiénes Somos</a>
+            <a class="nav-link" href="Quienes.html">Quiénes Somos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#galeria">Galería</a>
+            <a class="nav-link" href="Galeria.html">Galería</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#eventos">Eventos</a>
+            <a class="nav-link" href="Eventos.html">Eventos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contactanos">Contáctanos</a>
+            <a class="nav-link" href="Contactanos.html">Contáctanos</a>
           </li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <a href="https://www.facebook.com"><img src="facebook-icon.png" alt="Facebook"></a>
+          <a href="https://www.facebook.com/trombonesdelcaribeoficial/photos"><img src="facebook-icon.png" alt="Facebook"></a>
         </div>
         <div class="col">
           <a href="https://www.instagram.com"><img src="instagram-icon.png" alt="Instagram"></a>
