--- a/WebSiteTrombonesDelCaribe/Quienes.html
+++ b/WebSiteTrombonesDelCaribe/Quienes.html
@@ -5,10 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Orquesta de mi Tío</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
- 
-
 </head>
 <body>
+  <style>
+    section {
+      background-color: blanchedalmond;
+      border: 1px solid black;
+      padding: 10px;
+    }
+  </style>
+  <style>
+    body {
+      background-image: url("Imagenes/TRb7.jpg");
+      background-repeat: no-repeat;
+      background-size: 100% auto;
+      background-position: center top;
+    }
+  </style>    
   <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <a class="navbar-brand" href="Index.html">Trombones Del Caribe</a>
@@ -34,22 +47,30 @@
     </nav>
   </header>
 </div>
+<section style="text-align: center; margin: 100px;">
+  <h1 style="font-style: italic; color: red;">Trombones del Caribe</h1>
+  <p style="text-align: center;">Los Trombones del Caribe es una reconocida banda de música formada por talentosos músicos caribeños.
+    Con su distintivo sonido tropical y energético, los Trombones del Caribe han cautivado audiencias de todo el mundo, la banda está compuesta por trombonistas expertos que dominan diversos estilos musicales, como salsa, merengue y jazz caribeño
+    Además de los trombones, la agrupación cuenta con una sección rítmica sólida que incluye pianos, percusión y una sección de vientos completa. Su repertorio abarca desde clásicos caribeños hasta composiciones originales, siempre llenas de ritmo y sabor.
+    Los Trombones del Caribe se han presentado en importantes festivales de música, teatros y eventos internacionales. Su energía en el escenario y su habilidad para improvisar solos impresionantes los han convertido en una de las bandas más destacadas de la región caribeña.</p>
+</section>
 </main>
-<footer class="bg-light">
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          <a href="https://www.facebook.com"><img src="facebook-icon.png" alt="Facebook"></a>
-        </div>
-        <div class="col">
-          <a href="https://www.instagram.com"><img src="instagram-icon.png" alt="Instagram"></a>
-        </div>
-        <div class="col">
-          <a href="https://www.twitter.com"><img src="twitter-icon.png" alt="Twitter"></a>
-        </div>
+<footer class="bg-light fixed-bottom">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <a href="https://www.facebook.com"><img src="facebook-icon.png" alt="Facebook"></a>
+      </div>
+      <div class="col">
+        <a href="https://www.instagram.com"><img src="instagram-icon.png" alt="Instagram"></a>
+      </div>
+      <div class="col">
+        <a href="https://www.twitter.com"><img src="twitter-icon.png" alt="Twitter"></a>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
+  
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
