--- a/WebSiteTrombonesDelCaribe/Index.html
+++ b/WebSiteTrombonesDelCaribe/Index.html
@@ -5,11 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Orquesta de mi Tío</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
- 
-  <style>
-    /* Estilos personalizados */
-    /* Agrega tus estilos CSS adicionales aquí */
-  </style>
+ <link rel="stylesheet" href="Style.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <header>
@@ -36,51 +33,71 @@
       </div>
     </nav>
   </header>
-
-  <main>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-50 mx-auto" src="Imagenes/TRb1.jpg" alt="Imagen 1">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-50 mx-auto" src="Imagenes/TRB2.jpg" alt="Imagen 2">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-50 mx-auto" src="Imagenes/TRB3.jpg" alt="Imagen 3">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-50 mx-auto" src="Imagenes/TRB4.jpg" alt="Imagen 4">
-        </div>
+    
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="Imagenes/TRb1.jpg" alt="Imagen 1">
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-     
-  </a>
-</div>
-</main>
-<footer class="bg-light">
-    <div class="container text-center">
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Imagenes/TRB2.jpg" alt="Imagen 2">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Imagenes/TRB3.jpg" alt="Imagen 3">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Imagenes/TRB4.jpg" alt="Imagen 4">
+      </div>
+    </div>
+     </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Siguiente</span>
+    </a>
+  </div>
+  
+  <footer class="bg-dark text-light">
+    <div class="container py-4">
       <div class="row">
         <div class="col">
-          <a href="https://www.facebook.com/trombonesdelcaribeoficial/photos"><img src="facebook-icon.png" alt="Facebook"></a>
+          <h4>Síguenos en redes sociales</h4>
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/tu_orquesta" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/tu_orquesta" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.twitter.com/tu_orquesta" target="_blank"><i class="fab fa-twitter"></i></a>
+            </li>
+          </ul>
         </div>
         <div class="col">
-          <a href="https://www.instagram.com"><img src="instagram-icon.png" alt="Instagram"></a>
+          <h4>Información de contacto</h4>
+          <p>Trombones del Caribe</p>
+          <p>Dirección de la orquesta</p>
+          <p>Teléfono: +1234567890</p>
+          <p>Email: info@tuorquesta.com</p>
         </div>
         <div class="col">
-          <a href="https://www.twitter.com"><img src="twitter-icon.png" alt="Twitter"></a>
+          <h4>Enlaces rápidos</h4>
+          <ul class="list-unstyled">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="sobre-nosotros.html">Sobre nosotros</a></li>
+            <li><a href="eventos.html">Eventos</a></li>
+            <li><a href="galeria.html">Galería</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+          </ul>
         </div>
       </div>
     </div>
   </footer>
+  
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
