--- a/WebSiteTrombonesDelCaribe/Quienes.html
+++ b/WebSiteTrombonesDelCaribe/Quienes.html
@@ -5,23 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Orquesta de mi Tío</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-</head>
-<body>
   <style>
-    section {
-      background-color: blanchedalmond;
-      border: 1px solid black;
-      padding: 10px;
+    section.intro-section {
+      text-align: center;
+      margin: 100px auto;
+    }
+    section.intro-section h1 {
+      font-style: italic;
+      color: red;
+    }
+    section.intro-section p {
+      margin-top: 30px;
+    }
+    section.intro-section .content-div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 200px;
+    }
+    body {
+      background-image: url("Imagenes/TRB9.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
     }
   </style>
-  <style>
-    body {
-      background-image: url("Imagenes/TRb7.jpg");
-      background-repeat: no-repeat;
-      background-size: 100% auto;
-      background-position: center top;
-    }
-  </style>    
+</head>
+<body>
   <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <a class="navbar-brand" href="Index.html">Trombones Del Caribe</a>
@@ -46,32 +56,26 @@
       </div>
     </nav>
   </header>
-</div>
-<section style="text-align: center; margin: 100px;">
-  <h1 style="font-style: italic; color: red;">Trombones del Caribe</h1>
-  <p style="text-align: center;">Los Trombones del Caribe es una reconocida banda de música formada por talentosos músicos caribeños.
-    Con su distintivo sonido tropical y energético, los Trombones del Caribe han cautivado audiencias de todo el mundo, la banda está compuesta por trombonistas expertos que dominan diversos estilos musicales, como salsa, merengue y jazz caribeño
-    Además de los trombones, la agrupación cuenta con una sección rítmica sólida que incluye pianos, percusión y una sección de vientos completa. Su repertorio abarca desde clásicos caribeños hasta composiciones originales, siempre llenas de ritmo y sabor.
-    Los Trombones del Caribe se han presentado en importantes festivales de música, teatros y eventos internacionales. Su energía en el escenario y su habilidad para improvisar solos impresionantes los han convertido en una de las bandas más destacadas de la región caribeña.</p>
-</section>
-</main>
-<footer class="bg-light fixed-bottom">
-  <div class="container text-center">
-    <div class="row">
-      <div class="col">
-        <a href="https://www.facebook.com"><img src="facebook-icon.png" alt="Facebook"></a>
-      </div>
-      <div class="col">
-        <a href="https://www.instagram.com"><img src="instagram-icon.png" alt="Instagram"></a>
-      </div>
-      <div class="col">
-        <a href="https://www.twitter.com"><img src="twitter-icon.png" alt="Twitter"></a>
-      </div>
+
+  <section class="intro-section">
+    <h1>Trombones del Caribe</h1>
+    <p>Los Trombones del Caribe es una reconocida banda de música formada por talentosos músicos caribeños. Con su distintivo sonido tropical y energético, los Trombones del Caribe han cautivado audiencias de todo el mundo, la banda está compuesta por trombonistas expertos que dominan diversos estilos musicales, como salsa, merengue y jazz caribeño. Además de los trombones, la agrupación cuenta con una sección rítmica sólida que incluye pianos, percusión y una sección de vientos completa. Su repertorio abarca desde clásicos caribeños hasta composiciones originales, siempre llenas de ritmo y sabor. Los Trombones del Caribe se han presentado en importantes festivales de música, teatros y eventos internacionales. Su energía en el escenario y su habilidad para improvisar solos impresionantes los han convertido en una de las bandas más destacadas de la región caribeña.</p>
+    <div class="content-div">
+      <p>1. Son una banda de música caribeña reconocida internacionalmente.</p>
+      <p>2. Tienen un sonido distintivo y enérgico con trombones como instrumento principal.</p>
+      <p>3. Su repertorio abarca diversos estilos musicales caribeños como salsa, merengue y jazz.</p>
+      <p>4. Cuentan con una sólida sección rítmica que incluye pianos, percusión y una sección de vientos completa.</p>
+      <p>5. Han participado en importantes festivales y eventos internacionales.</p>
     </div>
-  </div>
-</footer>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
-</html>
+  </section>
+  <footer class="bg-light fixed-bottom">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <a href="https://www.facebook.com"><img src="facebook-icon.png" alt="Facebook"></a>
+        </div>
+        <div class="col">
+          <a href="https://www.instagram.com"><img src="instagram-icon.png" alt="Instagram"></a>
+        </div>
+        <div class="col">
+          <a href="https://www.twitter.com"><img src="twitter-icon.png" alt="Twitter"></
