--- a/WebSiteTrombonesDelCaribe/Index.html
+++ b/WebSiteTrombonesDelCaribe/Index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
       <a class="navbar-brand" href="Index.html">Trombones Del Caribe</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,7 +60,7 @@
       <span class="sr-only">Siguiente</span>
     </a>
   </div>
-  
+  <!--Pie de pagina-->
   <footer class="bg-dark text-light">
     <div class="container py-4">
       <div class="row">
@@ -79,7 +80,7 @@
         </div>
         <div class="col">
           <h4>Información de contacto</h4>
-          <p>Trombones del Caribe</p>
+          <p>Trombones del Caribe0</p>
           <p>Dirección de la orquesta</p>
           <p>Teléfono: +1234567890</p>
           <p>Email: info@tuorquesta.com</p>
